# OVID

./: .gitignore  README.md  pyproject.toml  registry.example.json  requirements.txt
src/ovid/: __init__.py  cli.py  config.py  pipeline.py  registry.py  server.py
